--- a/app/src/main/res/layout/activity_midi_settings.xml
+++ b/app/src/main/res/layout/activity_midi_settings.xml
@@ -18,6 +18,13 @@
             android:orientation="horizontal">
 
             <Button
+                android:id="@+id/midiSettingsCancelButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/cancel" />
+
+            <Button
                 android:id="@+id/midiSettingsOkButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
